refactor(java): real downloads, no sleeps, thread-safe driver